test/regress/cov-account-lookup-O-break.test
; Coverage test for account.cc line 504
; Account lookup 'O' break when fn_name starts with O but isn't just 'O'

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test bal --display "Oops" -> 1
__ERROR__
While evaluating value expression:
  Oops
  ^^^^
Error: Unknown identifier 'Oops'
end test
